# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  setup.cfg
page_analyzer/: app.py  check.py  db.py
page_analyzer/templates/: 404.html  index.html  layout.html  show_url.html  urls.html
